# football-prediction-real-madrid

./: .dockerignore  .gitignore  Dockerfile  LSTM_INTEGRATION_SUMMARY.md  S&P500.md  docker-compose.dev.yml  docker-compose.yml  generate_results.py  project_results.csv  requirements.txt
Dataset/: 2_04012021 to 01012022.csv  3_04012022 to 02012023.csv  5_02012024 to 01012025.csv  6_01012025 to 25072025.csv  SP500_combined_2020-2025.csv  combinedcsv.ipynb  yf_sp500_29_july.csv  yf_sp500_5min.csv
Models/: LSTM_model.ipynb  Logistic Regression.ipynb  README.md  RandomForest.ipynb  XG Boost Regressor.ipynb  XG boost Classifer.ipynb  XGBoost Regressor yfinance.ipynb  comparaisonModel.ipynb
SP500_v2/: run_app.py
SP500_v2/app/: app.py
SP500_v2/data/: __init__.py  create_csv_dataset.py  dataset.py  fetch_data.py  sp500_data_2020-01-01_2025-08-08.csv
SP500_v2/data/csv/: GSPC_processed_2020-01-01_20250807.csv  GSPC_raw_2020-01-01_20250807.csv  GSPC_test_2020-01-01_20250807.csv  GSPC_train_2020-01-01_20250807.csv
SP500_v2/models/: LSTM.py  Ligthgbm.py  LogisticReg.py  XGboost.py
SP500_v2/models/saved_models/lightgbm_classification_default/: feature_importance.csv  metadata.json  model.joblib
SP500_v2/models/saved_models/lightgbm_classification_optimized/: feature_importance.csv  metadata.json  model.joblib
SP500_v2/models/saved_models/lightgbm_regression_default/: feature_importance.csv  metadata.json  model.joblib
SP500_v2/models/saved_models/lightgbm_regression_optimized/: feature_importance.csv  metadata.json  model.joblib
SP500_v2/models/saved_models/logistic_classification_default/: feature_importance.csv  model.joblib  scaler.joblib
SP500_v2/models/saved_models/logistic_classification_optimized/: feature_importance.csv  model.joblib  scaler.joblib
SP500_v2/models/saved_models/logistic_regression_optimized/: feature_importance.csv  model.joblib
SP500_v2/models/saved_models/lstm_classification_optimized/: feature_importance.csv  lstm_model.pth  training_history.json
SP500_v2/models/saved_models/lstm_regression_optimized/: feature_importance.csv  lstm_model.pth  training_history.json
SP500_v2/models/saved_models/xgboost_classification_optimized/: feature_importance.csv  model.joblib
SP500_v2/models/saved_models/xgboost_regression_optimized/: feature_importance.csv  model.joblib
sp500-prediction/: .dockerignore  .env.production  .env.template  .pre-commit-config.yaml  AUTOMATION_SETUP_GUIDE.md  AUTOMATION_STATUS_REPORT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_STATUS.md  Dockerfile  ENHANCEMENT_SUMMARY.md  TROUBLESHOOTING.md  docker-compose.yml  fix_email_imports.py  pyproject.toml  requirements-prod.txt  requirements.txt  test_daily_update.py  test_dashboard.py  test_dates.py  test_docker_deployment.py  test_enhanced_dashboard.py  test_model_retrainer.py  test_prediction_generator.py  test_scheduler_core.py  test_scheduler_main.py  test_scheduler_simple.py
sp500-prediction/.github/: CI_CD_GUIDE.md  SECRETS_SETUP.md
sp500-prediction/.github/workflows/: cd.yml  ci.yml
sp500-prediction/app/: streamlit_app.py
sp500-prediction/data/processed/: sp500_features.csv
sp500-prediction/data/raw/: sp500_historical.csv  vix_historical.csv
sp500-prediction/deploy/: AZURE_DEPLOYMENT_GUIDE.md  azure_app_service_template.json  azure_container_template.json  azure_deploy.ps1  azure_deploy.sh  nginx.conf  requirements-prod.txt
sp500-prediction/docker/: entrypoint.sh  healthcheck.py
sp500-prediction/models/: feature_names.pkl  gradient_boosting.pkl  logistic_regression.pkl  random_forest.pkl  scaler.pkl
sp500-prediction/scheduler/: .env.prediction.template  .env.retrainer.template  README.md  daily_data_update.py  model_retrainer.py  prediction_config.template.json  prediction_generator.py  retrainer_config.template.json  scheduler_config.json  scheduler_main.py
sp500-prediction/src/: data_collection.py  feature_engineering.py  predict.py  train_model.py  train_model_fixed.py
sp500-prediction/tests/: test_data_collection.py  test_feature_engineering.py  test_model_training.py
src/: app.py  features.py  models.py  plots.py
